Fix HAM issues, channel no longer being int, correct hamcs message format etc

--- a/webroutes/api.yaml
+++ b/webroutes/api.yaml
@@ -1553,6 +1553,11 @@ components:
       - "4"
       - "5"
       - "6"
+      - "HAM1"
+      - "HAM2"
+      - "HAM3"
+      - "HAM4"
+      - "HAM5"
     ChannelObj:
       type: "object"
       properties:
